BasePackage/objects/Voucher__c/fields/Associate__c.field-meta.xml
<CustomField>
    <fullName>Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associate</label>
    <referenceTo>Associate__c</referenceTo>
    <relationshipLabel>Vouchers</relationshipLabel>
    <relationshipName>Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>