BasePackage/objects/Voucher__c/fields/Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>Certification_Type__c</fullName>
    <label>Certification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>PD1</fullName>
            </value>
            <value>
                <fullName>Advanced ADM</fullName>
            </value>
            <value>
                <fullName>PD2</fullName>
            </value>
            <value>
                <fullName>Platform App Builder</fullName>
            </value>
            <value>
                <fullName>JS Developer 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>