BasePackage/objects/Voucher__c/fields/Certified__c.field-meta.xml
<CustomField>
    <fullName>Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked during approval process if and only if the certification is verified as passed</description>
    <label>Certified</label>
    <type>Checkbox</type>
</CustomField>