BasePackage/objects/Voucher__c/fields/Eligible_By__c.field-meta.xml
<CustomField>
    <fullName>Eligible_By__c</fullName>
    <label>Eligible By</label>
    <type>Date</type>
</CustomField>