BasePackage/objects/Voucher__c/fields/Max_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Date__c</fullName>
    <label>Max Date</label>
    <summarizedField>Attempt__c.CreatedDate</summarizedField>
    <summaryForeignKey>Attempt__c.Voucher__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>