BasePackage/objects/Voucher__c/fields/Number_of_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attempts__c</fullName>
    <label>Number of Attempts</label>
    <summaryForeignKey>Attempt__c.Voucher__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>