BasePackage/objects/Voucher__c/fields/Remaining_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Attempts__c</fullName>
    <formula>6 -  Number_of_Attempts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>