BasePackage/objects/Voucher__c/fields/Voucher_Type__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Type__c</fullName>
    <label>Voucher Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Practice</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>