BasePackage/objects/Voucher__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Certification_Type__c</columns>
    <columns>Associate__c</columns>
    <columns>Voucher_Type__c</columns>
    <columns>Number_of_Attempts__c</columns>
    <columns>Certified__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>